backend/k8s/auth-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth
  namespace: unify

spec:
  selector:
    app: auth

  ports:
    - port: 80
      targetPort: 8001
