backend/k8s/gateway-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gateway
  namespace: unify

spec:
  selector:
    app: gateway

  ports:
    - port: 80
      targetPort: 8000
