backend/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backend
  namespace: unify

spec:
  ingressClassName: traefik

  rules:
    - host: your-domain.com

      http:
        paths:
          - path: /
            pathType: Prefix

            backend:
              service:
                name: gateway

                port:
                  number: 80
